<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ArtImageView"
        android:layout_width="207dp"
        android:layout_height="149dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/artNameText"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="enter the ArtName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArtImageView" />

    <EditText
        android:id="@+id/artistNameText"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter the ArtistName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artNameText" />

    <EditText
        android:id="@+id/artYearText"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Enter The Art year"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistNameText" />

    <Button
        android:id="@+id/artSaveButton"
        android:layout_width="194dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="SAVE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artYearText" />

</androidx.appcompat.widget.LinearLayoutCompat>